apps/portfolio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  type: ClusterIP
  selector:
    app: portfolio
    app.kubernetes.io/name: portfolio
  ports:
    - name: http
      port: 80
      targetPort: http
