apps/portfolio/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio-route
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-certificate
  routes:
    - match: Host(`matiix310.dev`)
      kind: Rule
      services:
        - name: portfolio
          port: 80
          scheme: http
          serversTransport: traefik-portfolio-transport
